Atualização de conteúdo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,24 @@
     <link rel="stylesheet" href="./CSS/estilo.css">
     <script src="./JavaScript/quiz.js"></script>
 </head>
+
 <body>
     <header>
         <h1>Quiz</h1>
     </header>
+
+    <section id="corpo">
+        <div>
+            <h3>Escolha uma reposta</h3>
+            <p>Pergunta</p>
+            <ul>
+                <li>Alternativa 1</li>
+                <li>Alternativa 2</li>
+                <li>Alternativa 3</li>
+                <li>Alternativa 4</li>
+            </ul>
+        </div>
+    </section>
 </body>
+
 </html>
