Criação de estilo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li>Alternativa 3</li>
                 <li>Alternativa 4</li>
             </ul>
+            <input type="button" value="Checar" class="button" id="checar">
         </div>
     </section>
 </body>
