Atualização de conteúdo
Adicionado o footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             </ul>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; Fernando</p>
+    </footer>
+
 </body>
 
 </html>
