Atualização da funcionalidade

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <section id="corpo">
         <div>
             <h3>Escolha uma reposta</h3>
-            <p>Pergunta</p>
+            <p id="pergunta">Pergunta</p>
             <ul>
-                <li>Alternativa 1</li>
-                <li>Alternativa 2</li>
-                <li>Alternativa 3</li>
-                <li>Alternativa 4</li>
+                <li id="alternativa1">Alternativa 1</li>
+                <li id="alternativa2">Alternativa 2</li>
+                <li id="alternativa3">Alternativa 3</li>
+                <li id="alternativa4">Alternativa 4</li>
             </ul>
-            <input type="button" value="Checar" class="button" id="checar">
+            <input type="button" value="Checar" class="button" id="checar" onclick="checar()">
         </div>
     </section>
 
